# uha-4.0

./: .gitignore  README.md
l-1/Fil_Rouge/Fil-Rouge/: index.html
l-1/Fil_Rouge/Fil-Rouge/data/: style.css
l-1/Fil_Rouge/V4/: Musique .sql
l-1/activité_1/html/: liensweb.html
l-1/activité_1/js/: liensweb.js
l-1/activité_2/css/: liensweb.css
l-1/activité_2/html/: liensweb.html
l-1/activité_2/js/: liensweb.js
l-1/activité_git/: README.md  hello.js
l-1/activité_git/JS/: ajax.js  index.js
l-2/402_JAVA_SPRING/: pom.xml
l-2/learning-kotlin/: pom.xml
m-4/AlgoGeo/01_fn_trace/: CMakeLists.txt  main.cpp
m-4/AlgoGeo/01_fn_trace/Shape/Envelope/: Envelope.cpp  Envelope.h
m-4/AlgoGeo/01_fn_trace/Shape/Point/: Point.cpp  Point.h
m-4/AlgoGeo/01_fn_trace/Shape/Polygon/: Polygon.cpp  Polygon.h
m-4/AlgoGeo/01_fn_trace/Shape/Vertex/: Vertex.cpp  Vertex.h
m-4/AlgoGeo/02_cartes_combinatoires/: CMakeLists.txt  affichage.cpp  affichage.h  carte.cpp  carte.h  main.cpp  point.cpp
m-4/AlgoGeo/03_disatnce_voronoi/: main.py
m-4/AlgoGeo/04_triangulation/: CMakeLists.txt  affichage.cpp  affichage.h  carte.cpp  carte.h  main.cpp  point.cpp  point.h
m-4/AlgoGeo/05_Voronoi/: TP1_brute-force.py  TP2_voronoi-discret.py  TP3_approximation-voronoi.py  TP4_voronoi_adaptatif.py  TP5-Kmeans.py
m-4/AlgoGeo/06_triangulation_delauney/: CMakeLists.txt  affichage.cpp  affichage.h  carte.cpp  carte.h  data.json  main.cpp  point.cpp  point.h
m-4/OpenGL/: Getting_Started.md  OpenGLMaster.sln
m-4/OpenGL/OpenGLMaster/: OpenGLMaster.vcxproj  OpenGLMaster.vcxproj.filters
(+31 files in other folders)
